# discite

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.py  engine.ini  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.0.10.json  mono_crash.0.2.json  mono_crash.0.3.json  mono_crash.0.4.json  mono_crash.0.5.json  mono_crash.0.6.json  mono_crash.0.7.json  mono_crash.0.8.json  mono_crash.0.9.json
cmake/: FindMono.cmake  (+1 more)
src/: CMakeLists.txt  blinn_phong_application.cpp  blinn_phong_application.hpp  camera_component.cpp  camera_component.hpp  camera_system.cpp  camera_system.hpp  directional_light_component.hpp  discite.cpp  discite.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  main.cpp  model_component.hpp  point_light_component.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  system.hpp  tag_component.hpp  transform_component.cpp  transform_component.hpp
src/editor/: CMakeLists.txt  dockspace_panel.cpp  dockspace_panel.hpp  editor_layer.cpp  editor_layer.hpp  entity_panel.cpp  entity_panel.hpp  imgui.cpp  imgui.hpp  imgui_layer.cpp  imgui_layer.hpp  imgui_panel.cpp  imgui_panel.hpp  main.cpp  performance_panel.cpp  performance_panel.hpp  renderer_panel.cpp  renderer_panel.hpp  scene_panel.cpp  scene_panel.hpp  viewport_panel.cpp  viewport_panel.hpp
src/engine/: #forward_pass.cpp#  CMakeLists.txt  animation.cpp  animation.hpp  animation_state.cpp  animation_state.hpp  application.cpp  application.hpp  assert.hpp  asset.cpp  asset.hpp  asset_cache.cpp  asset_cache.hpp  asset_description.cpp  asset_description.hpp  asset_handle.cpp  asset_handle.hpp  asset_importer_manager.cpp  asset_importer_manager.hpp  bloom_pass.cpp  bloom_pass.hpp  camera.cpp  camera.hpp  cmd_args_parser.cpp  cmd_args_parser.hpp  config.cpp  config.hpp  debug_draw.cpp  debug_draw.hpp  defer.hpp  directional_light.cpp  directional_light.hpp  engine.cpp  engine.hpp  env_map_asset.cpp  env_map_asset.hpp  environment_map.cpp  environment_map.hpp  event.cpp  event.hpp  (+95 more)
src/engine/graphic/: CMakeLists.txt  cube_texture.hpp  framebuffer.hpp  index_buffer.hpp  renderbuffer.hpp  renderer.cpp  renderer.hpp  shader.hpp  shader_storage_buffer.hpp  texture.hpp  texture_array.hpp  texture_view.hpp  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp
src/engine/platform/gl/: CMakeLists.txt  gl.cpp  gl.hpp  gl_cube_texture.cpp  gl_cube_texture.hpp  gl_framebuffer.cpp  gl_framebuffer.hpp  gl_helper.hpp  gl_index_buffer.cpp  gl_index_buffer.hpp  gl_renderbuffer.cpp  gl_renderbuffer.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_shader.cpp  gl_shader.hpp  gl_shader_storage_buffer.cpp  gl_shader_storage_buffer.hpp  gl_texture.cpp  gl_texture.hpp  gl_texture_array.cpp  gl_texture_array.hpp  gl_texture_view.cpp  gl_texture_view.hpp  gl_vertex_array.cpp  gl_vertex_array.hpp  gl_vertex_buffer.cpp  gl_vertex_buffer.hpp
src/game/: CMakeLists.txt  animation_system.cpp  animation_system.hpp  camera_component.cpp  camera_component.hpp  camera_system.cpp  camera_system.hpp  component_types.hpp  directional_light_component.cpp  directional_light_component.hpp  discite.cpp  discite.hpp  entity.cpp  entity.hpp  game_layer.cpp  game_layer.hpp  guid_component.cpp  guid_component.hpp  mesh_component.cpp  mesh_component.hpp  model_component.cpp  model_component.hpp  name_component.cpp  name_component.hpp  point_light_component.cpp  point_light_component.hpp  relationship_component.cpp  relationship_component.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene_asset.cpp  scene_asset.hpp  scene_asset_importer.cpp  scene_asset_importer.hpp  scene_events.cpp  scene_events.hpp  (+15 more)
src/game/audio/: CMakeLists.txt  audio_asset.cpp  audio_asset.hpp  audio_buffer.cpp  audio_buffer.hpp  audio_engine.cpp  audio_engine.hpp  audio_listener_component.cpp  audio_listener_component.hpp  audio_source.cpp  audio_source.hpp  audio_source_component.cpp  audio_source_component.hpp  audio_system.cpp  audio_system.hpp  open_al_helper.cpp  open_al_helper.hpp  wav_file.cpp  wav_file.hpp
src/game/physic/: CMakeLists.txt  box_collider.cpp  box_collider.hpp  box_collider_component.cpp  box_collider_component.hpp  capsule_collider.cpp  capsule_collider.hpp  capsule_collider_component.cpp  capsule_collider_component.hpp  character_controller.cpp  character_controller.hpp  character_controller_component.cpp  character_controller_component.hpp  cooking_factory.cpp  cooking_factory.hpp  mesh_collider.cpp  mesh_collider.hpp  mesh_collider_cache.hpp  mesh_collider_component.cpp  mesh_collider_component.hpp  mesh_collider_data.cpp  mesh_collider_data.hpp  physic_actor.cpp  physic_actor.hpp  physic_collider.cpp  physic_collider.hpp  physic_controller.cpp  physic_controller.hpp  physic_engine.cpp  physic_engine.hpp  physic_events.cpp  physic_events.hpp  physic_material.hpp  physic_scene.cpp  physic_scene.hpp  physic_settings.cpp  physic_settings.hpp  physic_system.cpp  physic_system.hpp  physic_types.hpp  (+16 more)
src/game/script/: CMakeLists.txt  entity_script_instance.cpp  entity_script_instance.hpp  entity_script_type.cpp  entity_script_type.hpp  script_component.cpp  script_component.hpp  script_engine.cpp  script_engine.hpp  script_helper.cpp  script_helper.hpp  script_registry.cpp  script_registry.hpp  script_system.cpp  script_system.hpp  script_wrapper.cpp  script_wrapper.hpp
src/runtime/: CMakeLists.txt  main.cpp
src/tools/: CMakeLists.txt
src/tools/audio_importer/: CMakeLists.txt  audio_importer_layer.cpp  audio_importer_layer.hpp  main.cpp
src/tools/brdf_lut/: CMakeLists.txt  brdf_lut_layer.cpp  brdf_lut_layer.hpp  main.cpp
src/tools/env_map_importer/: CMakeLists.txt  env_map_importer_layer.cpp  env_map_importer_layer.hpp  main.cpp
src/tools/irr_map/: CMakeLists.txt  irr_map_layer.cpp  irr_map_layer.hpp  main.cpp
src/tools/mesh_importer/: CMakeLists.txt  main.cpp  mesh_importer_layer.cpp  mesh_importer_layer.hpp
src/tools/scene_importer/: CMakeLists.txt  main.cpp  scene_importer_layer.cpp  scene_importer_layer.hpp
(+244 files in other folders)
